[tool.poetry]
name = "eXchangeAPI-PY"
version = "0.1.0"
description = ""
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.2"
loguru = "^0.5.0"
uvicorn = "^0.11.5"
pymongo = "^3.10.1"
dynaconf = "^2.2.3"
motor = "^2.1.0"
pydantic = {extras = ["email"], version = "^1.5.1"}

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
